--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ flutter:
   uses-material-design: true
 
     # To add assets to your application, add an assets section, like this:
-    # assets:
+  assets:
+    - resources/images/myIcon.png
     #   - images/a_dot_burr.jpeg
     #   - images/a_dot_ham.jpeg
 
@@ -73,19 +74,19 @@ flutter:
   #            weight: 700
   #      - family: Assistant
   #        fonts:
-  #          - asset: fonts/Assistant-ExtraLight.ttf
+  #          - asset: resources/fonts/Assistant-ExtraLight.ttf
   #            weight: 200
-  #          - asset: fonts/Assistant-Light.ttf
+  #          - asset: resources/fonts/Assistant-Light.ttf
   #            weight: 300
-  #          - asset: fonts/Assistant-Regular.ttf
+  #          - asset: resources/fonts/Assistant-Regular.ttf
   #            weight: 400
-  #          - asset: fonts/Assistant-Medium.ttf
+  #          - asset: resources/fonts/Assistant-Medium.ttf
   #            weight: 500
-  #          - asset: fonts/Assistant-SemiBold.ttf
+  #          - asset: resources/fonts/Assistant-SemiBold.ttf
   #            weight: 600
-  #          - asset: fonts/Assistant-Bold.ttf
+  #          - asset: resources/fonts/Assistant-Bold.ttf
   #            weight: 700
-  #          - asset: fonts/Assistant-ExtraBold.ttf
+  #          - asset: resources/fonts/Assistant-ExtraBold.ttf
   #            weight: 800
   #
   # For details regarding fonts from package dependencies,
