--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,14 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  http: ^0.13.3
+  get_server: ^1.1.1
+  qr_flutter: ^4.0.0
+  dio: ^4.0.0
+  kafka:
+    git:
+      url: https://github.com/dart-drivers/kafka.git
+      ref: kafka-0.10
   flutter:
     sdk: flutter
 
